--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,9 @@
   <title>HTML Academy: Мишка</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
+  <link rel="icon" type="image/svg+xml" href="./img/favicons/favicon-svg.svg"> <!-- 32×32 -->
+  <link rel="apple-touch-icon" href="./img/favicons/apple-icon-180x180.png"> <!-- 180×180 -->
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
@@ -108,9 +110,9 @@
         </dl>
         <div class="product__image">
           <picture>
-            <source media="(min-width: 1150px)" srcset="./img/product-triple-set-desktop.jpg">
-            <source media="(min-width: 768px)" srcset="./img/product-triple-set-tablet.jpg">
-            <img class="product__image-photo" src="./img/product-triple-set-mobile.jpg" width="260px" height="315px"
+            <source media="(min-width: 1150px)" srcset="./img/product-triple-set-desktop.jpg 1x, ./img/product-triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="./img/product-triple-set-tablet.jpg 1x, ./img/product-triple-set-tablet@2x.jpg 2x">
+            <img class="product__image-photo" src="./img/product-triple-set-mobile.jpg" srcset="./img/product-triple-set-mobile@2x.jpg 2x" width="260px" height="315px"
               alt="Сет из трех вязаных корзинок.">
           </picture>
         </div>
