--- a/source/form.html
+++ b/source/form.html
@@ -98,7 +98,7 @@
           <ul class="filter__list filter__list--checkbox">
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
-                <input class="filter__input filter__input--checkbox visually-hidden" tabindex="-1" type="checkbox"
+                <input class="filter__input filter__input--checkbox visually-hidden" type="checkbox"
                   name="white" checked>
                 <span class="filter__mark filter__mark--checkbox" tabindex="0"></span>
                 Белый
@@ -106,7 +106,7 @@
             </li>
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
-                <input class="filter__input filter__input--checkbox visually-hidden" tabindex="-1" type="checkbox"
+                <input class="filter__input filter__input--checkbox visually-hidden" type="checkbox"
                   name="gray" checked>
                 <span class="filter__mark filter__mark--checkbox" tabindex="0"></span>
                 Серый
@@ -114,7 +114,7 @@
             </li>
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
-                <input class="filter__input filter__input--checkbox visually-hidden" tabindex="-1" type="checkbox"
+                <input class="filter__input filter__input--checkbox visually-hidden" type="checkbox"
                   name="tiffany">
                 <span class="filter__mark filter__mark--checkbox" tabindex="0"></span>
                 Тиффани
@@ -122,7 +122,7 @@
             </li>
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
-                <input class="filter__input filter__input--checkbox visually-hidden" tabindex="-1" type="checkbox"
+                <input class="filter__input filter__input--checkbox visually-hidden" type="checkbox"
                   name="black">
                 <span class="filter__mark filter__mark--checkbox" tabindex="0"></span>
                 Черный
@@ -130,7 +130,7 @@
             </li>
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
-                <input class="filter__input filter__input--checkbox visually-hidden" tabindex="-1" type="checkbox"
+                <input class="filter__input filter__input--checkbox visually-hidden" type="checkbox"
                   name="pink">
                 <span class="filter__mark filter__mark--checkbox" tabindex="0"></span>
                 Розовый
@@ -138,7 +138,7 @@
             </li>
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
-                <input class="filter__input filter__input--checkbox visually-hidden" tabindex="-1" type="checkbox"
+                <input class="filter__input filter__input--checkbox visually-hidden" type="checkbox"
                   name="orange">
                 <span class="filter__mark filter__mark--checkbox" tabindex="0"></span>
                 Оранжевый
