--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Мишка</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/svg+xml" href="./img/favicons/favicon-svg.svg"> <!-- 32×32 -->
   <link rel="apple-touch-icon" href="./img/favicons/apple-icon-180x180.png"> <!-- 180×180 -->
@@ -15,12 +15,14 @@
 <body>
   <div class="page-body">
     <header class="main-header">
+      <!-- Modifier main-nav--visible for open mode -->
+      <!-- Modifier man-nav--nojs for mode without JS -->
       <nav class="main-nav main-nav--hidden main-nav--nojs">
         <a class="main-nav__logo logo">
           <picture>
             <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
-            <img class="main-nav__logo-image" src="./img/mishka-logo-mobile.svg" width="86px" height="35px"
+            <img class="main-nav__logo-image" src="./img/mishka-logo-mobile.svg" width="86" height="35"
               alt="Логотип магазина Мишка.">
           </picture>
         </a>
@@ -112,12 +114,12 @@
             <source media="(min-width: 768px)"
               srcset="./img/product-triple-set-tablet.jpg 1x, ./img/product-triple-set-tablet@2x.jpg 2x">
             <img class="product__image-photo" src="./img/product-triple-set-mobile.jpg"
-              srcset="./img/product-triple-set-mobile@2x.jpg 2x" width="260px" height="315px"
+              srcset="./img/product-triple-set-mobile@2x.jpg 2x" width="260" height="315"
               alt="Сет из трех вязаных корзинок.">
           </picture>
         </div>
         <p class="product__price">Цена: 990 руб.</p>
-        <button class="product__button button" type="button">Заказать</button>
+        <button class="product__button button modal-toggle" type="button">Заказать</button>
       </section>
       <section class="advantages">
         <h2 class="advantages__title title">Коротко о нас:</h2>
@@ -242,7 +244,7 @@
     </footer>
   </div>
 
-  <div class="modal-container modal-container--closed">
+  <div class="modal-container modal-container--closed modal-container--nojs">
     <div class="modal">
       <section class="modal__section">
         <h2 class="modal__title title">Добавить в корзину</h2>
@@ -250,19 +252,22 @@
           <fieldset class="modal-form__group">
             <legend class="modal-form__title">Выберите размер:</legend>
             <ul class="modal-form__list">
-              <li class="modal-form__item modal-form__item--active">
-                <label class="modal-form__label">s
-                  <input class="modal-form__input visually-hidden" type="radio" name="size" value="s">
+              <li class="modal-form__item">
+                <label class="modal-form__label">
+                  <input class="modal-form__input visually-hidden" type="radio" name="size" value="s" checked>
+                  <span class="modal-form__mark">s</span>
                 </label>
               </li>
               <li class="modal-form__item">
-                <label class="modal-form__label">m
+                <label class="modal-form__label">
                   <input class="modal-form__input visually-hidden" type="radio" name="size" value="m">
+                  <span class="modal-form__mark">m</span>
                 </label>
               </li>
               <li class="modal-form__item">
-                <label class="modal-form__label">l
+                <label class="modal-form__label">
                   <input class="modal-form__input visually-hidden" type="radio" name="size" value="l">
+                  <span class="modal-form__mark">l</span>
                 </label>
               </li>
             </ul>
