fixed build task

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -223,7 +223,7 @@
         <h2 class="modal__title title">Добавить в корзину</h2>
         <form class="modal__form modal-form" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="modal-form__group">
-            <legend class="modal-form__title">Выберите размер:</legend>
+            <h3 class="modal-form__title">Выберите размер:</h3>
             <ul class="modal-form__list">
               <li class="modal-form__item">
                 <label class="modal-form__label">
