--- a/source/form.html
+++ b/source/form.html
@@ -70,13 +70,13 @@
 
   <main class="main-form">
     <section class="main-form__section">
-      <h2 class="main-form__title title">Вязание на заказ</h2>
+      <h1 class="main-form__title title">Вязание на заказ</h1>
       <p class="main-form__subtitle">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы
         свяжемся с вами, чтобы уточнить детали.</p>
 
       <form class="main-form__filter filter" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="filter__group filter__group--type">
-          <h3 class="filter__title filter__title--type filter__title--green">Тип</h3>
+          <h2 class="filter__title filter__title--type filter__title--green">Тип</h2>
           <ul class="filter__list filter__list--radio">
             <li class="filter__item filter__item--type">
               <label class="filter__label filter__label--radio">
@@ -98,7 +98,7 @@
         </fieldset>
 
         <fieldset class="filter__group filter__group--color">
-          <h3 class="filter__title filter__title--color filter__title--green">Цвет</h3>
+          <h2 class="filter__title filter__title--color filter__title--green">Цвет</h2>
           <ul class="filter__list filter__list--checkbox">
             <li class="filter__item filter__item--color">
               <label class="filter__label filter__label--checkbox">
@@ -148,7 +148,7 @@
         </fieldset>
 
         <fieldset class="filter__group filter__group--name">
-          <h3 class="filter__title filter__title--name filter__title--green">ФИО</h3>
+          <h2 class="filter__title filter__title--name filter__title--green">ФИО</h2>
           <ul class="filter__list filter__list--name">
             <li class="filter__item filter__item--name">
               <label class="filter__label filter__label--name">Имя:
@@ -172,7 +172,7 @@
         </fieldset>
 
         <fieldset class="filter__group filter__group--phone">
-          <h3 class="filter__title filter__title--phone filter__title--green">Тел</h3>
+          <h2 class="filter__title filter__title--phone filter__title--green">Тел</h2>
           <label>
             <input class="filter__input filter__input-phone" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*"
               required>
@@ -182,7 +182,7 @@
           </label>
         </fieldset>
         <fieldset class="filter__group filter__group--email">
-          <h3 class="filter__title filter__title--email filter__title--green">E-mail</h3>
+          <h2 class="filter__title filter__title--email filter__title--green">E-mail</h2>
           <label>
             <input class="filter__input filter__input-email" type="email" name="email" placeholder="Ваш Email*"
               required>
@@ -193,7 +193,7 @@
         </fieldset>
 
         <fieldset class="filter__group filter__group--comments">
-          <h3 class="filter__title filter__title--comments filter__title--green">Доп</h3>
+          <h2 class="filter__title filter__title--comments filter__title--green">Доп</h2>
           <textarea class="filter__input filter__input--textarea" name="comment" wrap="soft"
             placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </fieldset>
@@ -212,6 +212,7 @@
         <svg class="footer__logo-image" width="102" height="35" fill="currentColor">
           <use xlink:href="./img/sprite.svg#footer-logo"></use>
         </svg>
+        <span class="visually-hidden">Интернет-магазин "Мишка".</span>
       </a>
     </div>
     <div class="footer__social social">
@@ -249,7 +250,7 @@
         <svg class="copyright__icon" width="27" height="35" fill="currentColor">
           <use xlink:href="./img/sprite.svg#academy-logo"></use>
         </svg>
-        <span class="visually-hidden">HTML Academy</span>
+        <span class="visually-hidden">HTML Academy.</span>
       </a>
     </div>
   </footer>
