--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,12 +71,18 @@
 
     <main class="main-catalog">
       <section class="main-catalog__section">
-        <h2 class="main-catalog__title title">Каталог товаров</h2>
+        <h1 class="main-catalog__title title">Каталог товаров</h1>
         <div class="main-catalog__wrapper">
           <ul class="main-catalog__list catalog">
             <li class="catalog__item">
               <a class="catalog__link-image" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1150px)"
+                    srcset="./img/photo-1-desktop.webp 1x, ./img/photo-1-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="./img/photo-1-tablet.webp 1x, ./img/photo-1-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="./img/photo-1-mobile.webp 1x, ./img/photo-1-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1150px)"
                     srcset="./img/photo-1-desktop.jpg 1x, ./img/photo-1-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
@@ -86,7 +92,7 @@
                 </picture>
               </a>
               <a class="catalog__link-subtitle" href="#">
-                <h3 class="catalog__subtitle subtitle">Зайчик-попрыгайчик</h3>
+                <h2 class="catalog__subtitle subtitle">Зайчик-попрыгайчик</h2>
               </a>
               <p class="catalog__description">Рост 30 см, вес 200 г</p>
               <div class="catalog__price-cart">
@@ -101,6 +107,12 @@
             <li class="catalog__item">
               <a class="catalog__link-image" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1150px)"
+                    srcset="./img/photo-2-desktop.webp 1x, ./img/photo-2-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="./img/photo-2-tablet.webp 1x, ./img/photo-2-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="./img/photo-2-mobile.webp 1x, ./img/photo-2-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1150px)"
                     srcset="./img/photo-2-desktop.jpg 1x, ./img/photo-2-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
@@ -110,7 +122,7 @@
                 </picture>
               </a>
               <a class="catalog__link-subtitle" href="#">
-                <h3 class="catalog__subtitle subtitle">Корзинка для белья</h3>
+                <h2 class="catalog__subtitle subtitle">Корзинка для белья</h2>
               </a>
               <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
               <div class="catalog__price-cart">
@@ -125,16 +137,22 @@
             <li class="catalog__item">
               <a class="catalog__link-image" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1150px)"
+                    srcset="./img/photo-3-desktop.webp 1x, ./img/photo-3-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="./img/photo-3-tablet.webp 1x, ./img/photo-3-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="./img/photo-3-mobile.webp 1x, ./img/photo-3-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1150px)"
                     srcset="./img/photo-3-desktop.jpg 1x, ./img/photo-3-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
                     srcset="./img/photo-3-tablet.jpg 1x, ./img/photo-3-tablet@2x.jpg 2x">
                   <img class="catalog__image" src="./img/photo-3-mobile.jpg" srcset="./img/photo-3-mobile@2x.jpg 2x"
-                    width="260" height="195" alt="Большая вязаная корзинка">
+                    width="260" height="195" alt="Большая вязаная корзинка.">
                 </picture>
               </a>
               <a class="catalog__link-subtitle" href="#">
-                <h3 class="catalog__subtitle subtitle">Большая корзинка<br>для игрушек</h3>
+                <h2 class="catalog__subtitle subtitle">Большая корзинка<br>для игрушек</h2>
               </a>
               <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
               <div class="catalog__price-cart">
@@ -148,13 +166,20 @@
             </li>
           </ul>
           <section class="production">
-            <h3 class="production__subtitle subtitle">Процесс производства</h3>
+            <h2 class="production__subtitle subtitle">Процесс производства</h2>
             <div class="production__video-container">
               <picture>
+                <source type="image/webp" media="(min-width: 1150px)"
+                  srcset="./img/video-desktop.webp 1x, ./img/video-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="./img/video-tablet.webp 1x, ./img/video-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="./img/video-mobile.webp 1x, ./img/video-mobile@2x.webp 2x">
+
+
                 <source media="(min-width: 1150px)" srcset="./img/video-desktop.jpg 1x, ./img/video-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/video-tablet.jpg 1x, ./img/video-tablet@2x.jpg 2x">
                 <img class="production__video" src="./img/video-mobile.jpg" srcset="./img/video-mobile@2x.jpg 2x"
-                  width="260" height="150" alt="Видео процесса производства">
+                  width="260" height="150" alt="Видео процесса производства.">
               </picture>
               <div class="production__playpause" tabindex="0"></div>
             </div>
@@ -174,6 +199,7 @@
           <svg class="footer__logo-image" width="102" height="35" fill="currentColor">
             <use xlink:href="./img/sprite.svg#footer-logo"></use>
           </svg>
+          <span class="visually-hidden">Интернет-магазин "Мишка".</span>
         </a>
       </div>
       <div class="footer__social social">
@@ -211,7 +237,7 @@
           <svg class="copyright__icon" width="27" height="35" fill="currentColor">
             <use xlink:href="./img/sprite.svg#academy-logo"></use>
           </svg>
-          <span class="visually-hidden">HTML Academy</span>
+          <span class="visually-hidden">HTML Academy.</span>
         </a>
       </div>
     </footer>
