--- a/source/index.html
+++ b/source/index.html
@@ -205,6 +205,7 @@
           <svg class="footer__logo-image" width="102" height="35" fill="currentColor">
             <use xlink:href="./img/sprite.svg#footer-logo"></use>
           </svg>
+          <span class="visually-hidden">Интернет-магазин "Мишка".</span>
         </a>
       </div>
       <div class="footer__social social">
@@ -242,7 +243,7 @@
           <svg class="copyright__icon" width="27" height="35" fill="currentColor">
             <use xlink:href="./img/sprite.svg#academy-logo"></use>
           </svg>
-          <span class="visually-hidden">HTML Academy</span>
+          <span class="visually-hidden">HTML Academy.</span>
         </a>
       </div>
     </footer>
